--- a/Client/src/Components/Stylesheets/Help.css
+++ b/Client/src/Components/Stylesheets/Help.css
@@ -15,8 +15,8 @@
   font-size: 2.5rem; /* Larger font size */
   font-weight: bold;
   color: #0044cc; /* Accent color */
-  text-align: center; /* Center the main title */
-  margin-bottom: 30px; /* More space below the title */
+  text-align: center; 
+  margin-bottom: 30px; 
 }
 
 /* Section Headings */
