--- a/Client/src/Components/Stylesheets/Appinfo.css
+++ b/Client/src/Components/Stylesheets/Appinfo.css
@@ -162,7 +162,7 @@
 
   .app-content {
     margin: 10px 0;
-    padding-left: 60px;
+    /* padding-left: 60px; */
   }
 
   .app-images img {
@@ -197,7 +197,7 @@
       justify-content: center;
       align-items: center;
       padding: 20px;
-      margin-left: 10px;
+     
     }
 
     .app-info {
@@ -208,10 +208,13 @@
       padding-bottom: 10px;
 
     }
-    .app-images, .app-content {
+     .app-content {
       max-width: 100%;
-      margin: 10px 0;
+      /* margin: 10px 0; */
     
+    }
+    .app-images{
+      margin: 10px;
     }
     .app-images img {
       width: 80% !important;
