name link and css changes

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1145,6 +1145,9 @@ color: aliceblue;
 .copyright {
   margin-top: 15px;
 }
+.Copyright-section span a {
+  text-decoration: none;
+}
 
 .website-name {
   font-weight: bold;
