--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -609,14 +609,35 @@ color: aliceblue;
  background-color:#007bff;
  
 }
-.steps-inner-flex-container2{
+.steps-inner-flex-container2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: 10px;
   background-color: #007bff;
-
+  
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease-out, transform 0.7s ease-out;
 }
+
+.steps-inner-flex-container2.fade-in-up {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+
 .steps-inner-flex-container2 h1{
   transform: translate(-25px,46px);
   color: rgb(255, 255, 255);
@@ -624,6 +645,7 @@ color: aliceblue;
 
   background-color: #007bff;
 }
+
 .steps-inner-container1 h1{
   background-color: #007bff;
   width: 500px;
@@ -657,6 +679,8 @@ color: aliceblue;
   font-size: 12px;
   color: white;
 }
+
+
 .trust-outer-container{
   width: 100%;
   display: flex;
