--- a/Client/src/Components/Stylesheets/Aboutus.css
+++ b/Client/src/Components/Stylesheets/Aboutus.css
@@ -58,12 +58,20 @@
 
   opacity: 0;
   transform: translateY(50px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out, transform 0.8s ease-out;
 }
 
 .animate-counsellor-card {
   opacity: 1;
   transform: translateY(0);
+  
+}
+.aboutus-card:hover {
+  transform: scale(1.05); 
+  width: 320px; 
+  height: 400px; 
+  box-shadow: 0px 10px 20px 4px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 
