--- a/Client/src/Components/Stylesheets/AppointmentBooking.css
+++ b/Client/src/Components/Stylesheets/AppointmentBooking.css
@@ -1,14 +1,14 @@
-/* AppointmentBooking.css */
 
-/* General Styles */
 .appointment-booking {
   font-family: Arial, sans-serif;
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
- /* border: 0.2px solid gray;
-  */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
 
 h3 {
@@ -40,7 +40,7 @@ h3 {
 }
 
 
-/* Adjusted Button Width */
+
 .submit-button {
   display: inline-block;
   width: 312px;
@@ -53,25 +53,24 @@ h3 {
   border-radius: 50px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-position 0.5s ease; /* Animate background position */
+  transition: background-position 0.5s ease;
   text-align: center;
   align-items: center;
   margin-top: 5px;
   cursor: pointer;
-  background-size: 200%; /* Make the background image larger to allow for movement */
-  background-position: right; /* Start position of the gradient */
+  background-size: 200%; 
+  background-position: right; 
 }
 
- /* Ensure consistent font size */
 
 
 
 .submit-button:hover {
-  background-position: left; /* End position of the gradient on hover */
+  background-position: left;
 }
 
 .submit-button:not(:hover) {
-  transition: background-position 0.5s ease; /* Smooth transition back to initial position */
+  transition: background-position 0.5s ease; 
 }
 
 
